# PlayWithLLVM

./: .gitignore
LLVMtutorial/LLVMTutorial/: AST.cpp  AST.h  LLVMTutorial.cbp  LLVMTutorial.layout  parser.cpp  parser.h  tutorial.cpp
firstTry/: Hello.cpp  add.cpp  add.ll  cfg._Z7addFuncii.dot  cfg._Z9countDownv.dot  cfg.main.dot  hello  hello.bc  hello.cpp  hello.ll  hello.s  hook.cpp  hook.ll  hookResult.ll  testHook.ll
mlir/: CMakeLists.txt  DemandedBits.cpp  DemandedBits.h  KnownBits.cpp  KnownBits.h  mlir-mutate.cpp  mlir-random.cpp  mlir-test.cpp  mutator.cpp  mutator.h  mutatorUtil.cpp  mutatorUtil.h  output.mlir  rocket.mlir  transfer.h
source/: installLLVM.sh
